--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,6 +4,53 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Screens.SplashScreenActivity">
+    tools:context=".Screens.SplashScreenActivity"
+    android:clipChildren="false">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/bg2" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="700dp"
+        android:layout_height="558dp"
+        android:layout_marginTop="-30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:srcCompat="@drawable/logo" />
+
+
+    <com.ncorti.slidetoact.SlideToActView
+        android:id="@+id/swipeToUnlock"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:elevation="6dp"
+        app:area_margin="-8dp"
+        app:animation_duration="250"
+        app:bounce_on_start="true"
+        app:inner_color="@color/dark_green"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.483"
+        app:outer_color="@color/white"
+        app:text=" Swipe to Get Start"
+        app:text_size="16sp"
+        app:text_appearance="@style/ThemeOverlay.MaterialComponents.Dialog.Alert"
+        app:slider_locked="true"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
