--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="dark_green">#1B5B04</color>
     <color name="light_gray">#E2E2E2</color>
+    <color name="light_blue">#0860A8</color>
 </resources>
