--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,7 +7,7 @@
     tools:context=".Screens.RegisterActivity"
     android:background="@drawable/bg">
 
-
+<!-- Add profile image choose section-->
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/user"
         android:layout_width="150dp"
