--- a/app/src/main/res/layout/activity_pesticides.xml
+++ b/app/src/main/res/layout/activity_pesticides.xml
@@ -53,7 +53,7 @@
         android:id="@+id/imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#3171B9"
+        android:background="#D7E0EA"
         app:layout_constraintBottom_toBottomOf="@+id/imageView7"
         app:layout_constraintEnd_toEndOf="@+id/imageView7"
         app:layout_constraintStart_toStartOf="@+id/imageView7"
@@ -69,7 +69,7 @@
         android:layout_marginEnd="30dp"
         android:layout_marginTop="80dp"
         app:cardCornerRadius="20dp"
-        app:cardElevation="5dp"
+        app:cardElevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -78,12 +78,17 @@
         app:layout_constraintVertical_bias="0.13999999"
         android:backgroundTint="@color/white">
 
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            android:id="@+id/my_view" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:weightSum="10"
             android:orientation="horizontal"
-            android:background="@color/white"
             android:layout_margin="5dp">
             <LinearLayout
                 android:layout_width="0dp"
@@ -132,12 +137,17 @@
         app:layout_constraintVertical_bias="0.0"
         android:backgroundTint="@color/white">
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            android:id="@+id/my_view2" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:weightSum="10"
             android:orientation="horizontal"
-            android:background="@color/white"
             android:layout_margin="5dp">
 
             <LinearLayout
@@ -184,12 +194,17 @@
         app:layout_constraintTop_toBottomOf="@+id/checkPesticides"
         app:layout_constraintVertical_bias="0.0"
         android:backgroundTint="@color/white">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            android:id="@+id/my_view3" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:weightSum="10"
             android:orientation="horizontal"
-            android:background="@color/white"
             android:layout_margin="5dp">
             <LinearLayout
                 android:layout_width="0dp"
@@ -234,12 +249,17 @@
         app:layout_constraintTop_toBottomOf="@+id/detailsPesticides"
         app:layout_constraintVertical_bias="0.0"
         android:backgroundTint="@color/white">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            android:id="@+id/my_view4" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:weightSum="10"
             android:orientation="horizontal"
-            android:background="@color/white"
             android:layout_margin="5dp">
 
             <LinearLayout
