--- a/app/src/main/res/layout/agriculture_service.xml
+++ b/app/src/main/res/layout/agriculture_service.xml
@@ -34,6 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="department"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:layout_marginStart="10dp" />
@@ -56,6 +57,7 @@
                 android:layout_height="wrap_content"
                 android:text="Contact"
                 android:textSize="20sp"
+                android:textColor="@color/black"
                 android:textStyle="bold"
                 android:layout_marginStart="10dp" />
 
@@ -76,6 +78,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Contact"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:layout_marginStart="10dp" />
