--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -66,7 +67,7 @@
         app:layout_constraintTop_toBottomOf="@+id/user">
 
         <EditText
-            android:id="@+id/username"
+            android:id="@+id/usernameReg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -74,7 +75,7 @@
             android:background="@drawable/edit_text_field"
             android:drawableStart="@drawable/person"
             android:drawablePadding="10dp"
-            android:hint="@string/username"
+            android:hint="@string/name"
             android:textColor="@color/black"
             android:textSize="17sp" />
 
@@ -121,7 +122,7 @@
         app:hintTextColor="@color/white">
 
         <EditText
-            android:id="@+id/phoneNumber"
+            android:id="@+id/phoneNumberReg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
