--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -6,12 +6,13 @@
     android:layout_height="200dp"
     android:background="@color/light_blue"
     android:gravity="bottom"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:id="@+id/header">
 
 
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/user"
+        android:id="@+id/userImage"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:elevation="10dp"
@@ -21,6 +22,7 @@
         app:civ_circle_background_color="@color/white"/>
 
     <TextView
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="agroPEST "
@@ -29,6 +31,7 @@
         />
 
     <TextView
+        android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="www.ou.ac.lk"
